[package]
name = "wonfy-tools"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Collection of tools for personal use, provides library and CLI."
repository = "https://github.com/SalahaldinBilal/wonfy-tools"
readme = "README.md"
keywords = ["tools", "image", "stitching"]
categories = ["command-line-utilities", "wasm", "multimedia::images"]

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "wonfy-tools-cli"
path = "src/main.rs"
required-features = ["cli"]

[dependencies]
chrono = { version = "0.4.41", optional = true }
clap = { version = "4.5.38", features = ["derive"], optional = true }
image = "0.25.6"
itertools = "0.14.0"
js-sys = "0.3.77"
rayon = "1.10.0"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"

[target.'cfg(all(target_arch = "wasm32", target_os = "unknown"))'.dependencies]
tracing-wasm = "0.2.1"
wasm-bindgen = "0.2.100"
console_error_panic_hook = "0.1.7"

[features]
default = []
cli = ["dep:clap", "dep:chrono"]

# [profile.release]
# debug = true
